add board game request admin view adding

--- a/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
+++ b/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
@@ -23,7 +23,13 @@ form div{
 input{
     margin-top: 5px;
 }
+
+
 @media screen and (max-width: 500px) {
+    ::ng-deep .p-toolbar {
+        flex-direction: column;
+    }
+
     ::ng-deep .p-dialog{
         width: 90% !important;
     }
