--- a/frontend/src/app/components/userRequest/view-user-request/view-user-request.component.html
+++ b/frontend/src/app/components/userRequest/view-user-request/view-user-request.component.html
@@ -1,7 +1,7 @@
 <div class="container-block">
     <p-toolbar styleClass="mb-4 gap-2">
         <ng-template pTemplate="left">
-          <div style="width: 100px;"></div>
+          <div style="width: 200px;"></div>
         </ng-template>
         <ng-template pTemplate="center">
           <h3 class="m-0">Sended messages status</h3>
@@ -24,12 +24,15 @@
         [showCurrentPageReport]="true"
     >
         <ng-template pTemplate="caption">
-            <div class="flex align-items-center justify-content-between">   
+            <div class="flex align-items-center justify-content-between" id="myHeader">   
                 <span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
                     <input pInputText type="text" (input)="dt.filterGlobal($any($event).target.value, 'contains')" placeholder="Search..." />
                 </span>
-                <button pButton pRipple label="New" pTooltip="Send us message" icon="pi pi-plus" class="p-button-success mr-2" [routerLink]="['/sendMessage']"></button>
+                <div id="button">
+                    <button pButton pRipple label="New" pTooltip="Send us message" icon="pi pi-plus" class="p-button-success" [routerLink]="['/sendMessage']"></button>
+                </div>
+                
             </div>
         </ng-template>
         <ng-template pTemplate="header">
