--- a/frontend/src/app/components/home/home-page.component.css
+++ b/frontend/src/app/components/home/home-page.component.css
@@ -63,6 +63,8 @@ button{
     border-radius: 5px;
     cursor: pointer;
     font-size: 15px;
+    text-align: center;
+    justify-content: center;
 }
 
 
