--- a/frontend/src/app/components/admin/user-request/user-request.component.html
+++ b/frontend/src/app/components/admin/user-request/user-request.component.html
@@ -1,6 +1,6 @@
 <div class="container-block">
     <p-toolbar styleClass="mb-4 justify-content-center h-5rem">
-          <h3 class="m-0">Manage User Requests</h3>
+          <h3 class="m-0">Manage User Messages</h3>
     </p-toolbar>
 
     <p-table  
