--- a/frontend/src/app/components/user-profile/user-favourite-game-list/user-favourite-game-list.component.html
+++ b/frontend/src/app/components/user-profile/user-favourite-game-list/user-favourite-game-list.component.html
@@ -1,11 +1,11 @@
 <app-generic-user-game-list
       (changeInDataEvent)="onChangeGameEvent($event)"
       [isCurrentUserList]="isLoggedInUserList"
-      [header]="'USER\'S FAVOURITE BOARD GAMES'"
+      [header]="header"
       [userInfo]="userInfo"
       [userId]="userId"
       [toggleButtonFn]="toogleButton"
-      [buttonName]="'User\'s all games'"
+      [buttonName]="buttonName"
       [favView]="true"
 > 
 </app-generic-user-game-list>
