--- a/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.html
+++ b/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.html
@@ -1,10 +1,10 @@
 <app-generic-user-game-list
       (changeInDataEvent)="onChangeGameEvent($event)"
       [isCurrentUserList]="isLoggedInUserList"
-      [header]="'USER\'S BOARD GAMES'"
+      [header]="header"
       [userInfo]="userInfo"
       [userId]="userId"
       [toggleButtonFn]="toogleButton"
-      [buttonName]="'User\'s favourite games'"
+      [buttonName]="buttonName"
 > 
 </app-generic-user-game-list>
