--- a/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
+++ b/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
@@ -9,7 +9,7 @@
     emptyMessage= "Don't see a board game that interests you? Add board game on contact panel and we will try to add it."
 >
     <ng-template pTemplate="header">
-        <div class="flex flex-col md:flex-row justify-content-between">
+        <div class="flex flex-col md:flex-row justify-content-between header">
             <div class="md:ml-2">
                 <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By" (onChange)="onSortChange($event)" styleClass="mb-2 md:mb-0" [style]="{'min-width':'15em'}"></p-dropdown> 
             </div>
