--- a/frontend/src/app/components/boardGame/top-games/top-games.component.html
+++ b/frontend/src/app/components/boardGame/top-games/top-games.component.html
@@ -1,15 +1,7 @@
 <div class="data-box">  
-    <p-toolbar styleClass="mb-4 gap-2">
-        <ng-template pTemplate="left">
-            <div style="width: 200px;"></div>
-        </ng-template>
-        <ng-template pTemplate="center">
-          <h3 class="m-0 header">TOP 10 BOARD GAMES</h3>
-        </ng-template>
-        <ng-template pTemplate="right">
-            <div class="link"><span [routerLink]="['/games']">Back to all games</span></div>
-        </ng-template>
-    </p-toolbar> 
+    <p-toolbar styleClass="mb-4 justify-content-center h-5rem">
+        <h3 class="m-0">TOP 10 BOARD GAMES</h3>
+    </p-toolbar>
     <app-game-generic
     (changeInDataEvent)="onChangeGameEvent($event)"
     [games]="topGames">
