--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
@@ -2,7 +2,7 @@
     <div class="data-box">
         <p-toolbar styleClass="mb-4 gap-2">
             <ng-template pTemplate="left">
-                <div class="user-name">User: <span pTooltip="Go back to user profile" [routerLink]="['/userProfile', userInfo.id]" class="user">{{userInfo.nickName}}</span> </div>
+                <div class="user-name">Username: <span pTooltip="Go back to profile" [routerLink]="['/userProfile', userInfo.id]" class="user">{{userInfo.nickName}}</span> </div>
             </ng-template>
             <ng-template pTemplate="center">
               <h3 class="m-0 header">{{header}}</h3>
@@ -13,15 +13,15 @@
         </p-toolbar>
         <p-dataView #dv [value]="userInfo.userBoardGames"  [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5, 10, 15, 100]" layout="grid" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
             <ng-template pTemplate="header">
-                <div class="flex flex-col md:flex-row justify-content-between">
+                <div class="flex flex-col md:flex-row justify-content-between myHeader">
                     <div class="md:ml-2">
                         <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By" (onChange)="onSortChange($event)" styleClass="mb-2 md:mb-0" [style]="{'min-width':'15em'}"></p-dropdown> 
                     </div>
-                    <div class="mb-2 md:mb-0">
-                    <span class="p-input-icon-left mb-2 md:mb-0 search">
-                        <i class="pi pi-search"></i>
-                        <input type="search" pInputText placeholder="Search" (input)="dv.filter($any($event).target.value)">
-                    </span>
+                    <div class="mb-2 md:mb-0 searchField">
+                        <span class="p-input-icon-left mb-2 md:mb-0 search">
+                            <i class="pi pi-search"></i>
+                            <input type="search" pInputText placeholder="Search" (input)="dv.filter($any($event).target.value)">
+                        </span>
                     </div>
                 </div>
             </ng-template>
