add fav herat icon clickable on fav user game list

--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
@@ -41,6 +41,7 @@
     cursor: pointer;
 }
 
+
 .nofav{
     color: #8a8a8a;
     margin-right: 10px;
@@ -51,6 +52,11 @@
     margin-right: 10px;
     font-size: 19px;
 }
+
+.heart-cursor{
+    cursor: pointer;
+}
+
 
 i{
     margin-right: 5px;
