edit image links, style fixes

--- a/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.html
+++ b/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.html
@@ -56,7 +56,7 @@
                     <p-tableCheckbox [value]="game"></p-tableCheckbox>
                 </td>
                 <td>{{ game.name }}</td>
-                <td><img [src]="game.imageUrl" [alt]="game.name" width="50" class="shadow-4" /></td>
+                <td><img [src]="game.imageUrl" [alt]="game.name" width="50"/></td>
                 <td>{{ game.publisher}}</td>
                 <td>{{ game.players }}</td>
                 <td>{{ game.time }}</td>
