--- a/frontend/src/app/components/boardGame/game-generic/game-generic.component.css
+++ b/frontend/src/app/components/boardGame/game-generic/game-generic.component.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.35); 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,10 +26,7 @@
 }
 .game-list-item img{
     width: 100%;
-    border-radius: 5%;
     object-fit: cover;
-    transition: background-color 0.3s;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
     cursor: pointer;
 }
 
@@ -118,11 +115,10 @@ i{
     justify-content: center;
 }
 .game-grid-detail img{
-    border-radius: 5%;
     object-fit: cover;
     transition: background-color 0.3s;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
     cursor: pointer;
+    max-width: 90%;
 }
 
 .game-grid-detail{
@@ -218,6 +214,18 @@ i{
     .game-grid-action 
     {
        flex-direction: column;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .game-grid-item img {
+      max-width: 70%; 
+    }
+}
+
+@media (max-width: 768px) {
+    .game-grid-item img {
+      max-width: 50%; 
     }
 }
 
