--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.35); 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -182,11 +182,9 @@ input::placeholder {
 }
 
 .game-grid-detail img{
-    border-radius: 5%;
     object-fit: cover;
-    transition: background-color 0.3s;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
     cursor: pointer;
+    max-width: 90%;
 }
 
 .game-grid-detail{
@@ -234,6 +232,22 @@ input::placeholder {
     .game-grid-down 
     {
        flex-direction: column;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1700px) {
+    .game-grid-item img {
+      max-width: 90%; 
+    }
+    .game-grid-action 
+    {
+       flex-direction: column;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .game-grid-item img {
+      max-width: 70%; 
     }
 }
 
