--- a/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
+++ b/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
@@ -1,8 +1,8 @@
 <p-dataView #dv 
     [value]="games" 
     [paginator]="true" 
-    [rows]="10" 
-    [rowsPerPageOptions]="[10, 25, 50, 100]" 
+    [rows]="8" 
+    [rowsPerPageOptions]="[8, 12, 24, 48, 96]" 
     filterBy="name,rating,publisher" 
     [sortField]="sortField" 
     [sortOrder]="sortOrder"
