--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
@@ -11,7 +11,7 @@
                 <div class="fav-game-link"><span (click)="triggerCallback()">{{buttonName}}</span></div>
             </ng-template>
         </p-toolbar>
-        <p-dataView #dv [value]="userInfo.userBoardGames"  [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5, 10, 15, 100]" layout="grid" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
+        <p-dataView #dv [value]="userInfo.userBoardGames"  [paginator]="true" [rows]="8" [rowsPerPageOptions]="[8, 12, 24, 48, 96]" layout="grid" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
             <ng-template pTemplate="header">
                 <div class="flex flex-col md:flex-row justify-content-between myHeader">
                     <div class="md:ml-2">
