--- a/frontend/src/app/components/admin/user-request/user-request.component.html
+++ b/frontend/src/app/components/admin/user-request/user-request.component.html
@@ -44,7 +44,7 @@
         </ng-template>
         <ng-template pTemplate="summary">
             <div class="flex align-items-center justify-content-between">
-                In total there are {{usersRequests ? usersRequests.length : 0 }} products.
+                In total there are {{usersRequests ? usersRequests.length : 0 }} messages.
             </div>
         </ng-template>
     </p-table>
